--- a/html/default.css
+++ b/html/default.css
@@ -1,29 +1,307 @@
-@charset "utf-8" ;
-
-
-p{background: blue}
-
-#container{
-	/*아이디를 선택할 경우, 앞에 샵을 붙여야 한다.*/
-	max-width: 960px;
+@charset "utf-8";
+/* html reset */
+header, 
+footer, 
+section, 
+article, 
+nav, 
+aside, 
+main,
+figure,
+figcaption{
+	display: block;
+}
+html,
+body{
+	min-height: 100%;
+}
+body{
+	margin: 0;
+	min-width: 320px;
+}
+body,
+table,
+button,
+input,
+textarea,
+select{
+	font-size: 14px;
 }
 
-
-.container{
-	/*클래스를 선택할 경우, 앞에 점을 붙인다.*/
-	max-width: 500px;
-	background: grey;
-	margin: 0 auto 0 0;
-	/*마진의 속성은 12시부터 시계방향으로 돌아가면서 적용된다.*/
-	/*0 auto 둘만 적어도, 0 auto 0 auto의 효과가 난다.*/
-	/*우측정렬하고 싶다면, 0 0 0 auto라고 적으면 된다.*/
-	list-style: ;
+/* All */
+body{
+	background: -webkit-linear-gradient(#ccc,#fff); 
+	background: -moz-linear-gradient(#ccc,#fff); 
+	background: -ms-linear-gradient(#ccc,#fff); 
+	background: -o-linear-gradient(#ccc,#fff); 
+	background: linear-gradient(#ccc,#fff); 
 }
-
-
 .header>h1{
-	/*헤더 밑에 있는 h1을 선택한 경우이다*/
-	color : green;
-	font-style : italic;
+	font-size: 28px;
+	text-shadow: 1px 1px 0 #fff;
+}
+.search>input{
+	vertical-align: top;
+	border-radius: 10px;
+}
+.search>[type="search"]{
+	border: 1px solid #ccc;
+	height: 32px;
+	width: 160px;
+	box-shadow: 0 0 4px #ccc inset;
+}
+.search>[type="submit"]{
+	width: 50px;
+	height: 32px;
+	background: #fff;
+	border: 1px solid #ccc;
+	box-shadow: 0 0 4px #aaa;
+}
+main,
+.lnb,
+.aside{
+	margin-bottom: 15px;
+}
+main{
+	background: #fff;
+	box-shadow: 0 0 4px #999;
+	box-shadow: 0 0 4px rgba(0,0,0,.3);
+	/* box-shadow를 두 번 쓴 이유: 위의 것은 IE7,8에서 인식하는 코드. 아래것은 못한다. 
+	그러므로, 저렇게 두 줄을 쓰면, IE7,8은 위의 것만 해석하고 아랫줄은 버리며, 다른 브라우저들은 아랫줄로 윗줄을 override한다. */
+	/* rgba의 최대값은 255, alpha는 1 */
+	/* css에서는 소수점 앞의 0은 생략할 수 있다. */
+	border-radius: 8px;
+	min-height: 300px;
+	/* height를 쓰면 컨텐츠가 넘쳐도 늘어나지 않는다. */
+}
+.lnb ul,
+.aside ul{
+	margin: 0;
+	padding: 0;
+	/* 네 방향이 모두 0이므로, 한 번만 0이라고 적어주면 된다. */
+	list-style: none;
+}
+.lnb{
+	text-shadow:1px 1px 0 #333;
+}
+.lnb h2{
+	background: #666;
+	border-radius: 4px 4px 0 0;
+	font-size: 14px;
+	color: #fff;
+	padding: 0 10px;
+	line-height: 32px;
+	margin: 0;
+}
+
+.lnb li{
+	margin: 1px 0;
+}
+.lnb a{
+	display: block;
+	background: #777;
+	padding: 0 10px;
+	height: 32px;
+	line-height: 34px;
+	/* 탭할 수 있는 최소의 크기를 32px로 권장하고 있다. */
+	text-decoration: none;
+	color: #fff;
+	-webkit-transition:.2s;
+	-moz-transition:.2s;
+	-ms-transition:.2s;
+	-o-transition:.2s;
+	transition:.2s;
+}
+.lnb :last-child>a{
+	border-radius: 0 0 4px 4px;
+}
+.lnb a:hover,
+.lnb a:focus{
+	background: #555;
+	/* focus는 키보드로 움직일 때를 위한 것이다. */
+}
+.lnb a:active{
+	background: red;
+}
+.aside{
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	padding: 0 10px;
+}
+.aside h2{
+	font-size: 14px;
+	margin: 0;
+	border-bottom:1px solid #ddd;
+	line-height: 32px;
+}
+.aside ul{
+	padding: 10px 0;
+}
+.aside a{
+	display: block;
+	line-height: 32px;
+}
+.footer{
+	border-top: 1px dotted #ccc;
+}
+.footer>p{
+	text-align: center;
+	color: #959595;
+}
+
+/* Mobile */
+.container{
+	margin: 0 10px;
+}
+.skip{
+	display: none;
+}
+.gnb>h2{
+	height: 1px;
+	position: absolute;
+	overflow: hidden;
+	margin: 0;
+}
+.gnb>button{
+	border:0;
+	background: #666;
+	width: 40px;
+	height: 36px;
+	padding: 36px 0 0 0;
+	overflow: hidden;
+	border-radius: 3px;
+	position: absolute;
+	cursor: pointer;
+	top: 15px;
+	right: 10px;
+}
+.gnb>button:before{
+	content:"";
+	position: absolute;
+	top: 4px;
+	left: 4px;
+	width: 32px;
+	height: 4px;
+	border-top: 12px double #fff;
+	border-bottom: 12px double #fff;
+}
+.gnb>ul{
+	background: #666;
+	border-radius: 4px;
+	overflow: hidden;
+	display: none;
+}
+.gnb ul{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+.gnb a{
+	display: block;
+	background: #666;
+	color: #fff;
+	line-height: 32px;
+	text-decoration: none;
+	padding: 0 10px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+.gnb>ul>li>a{
+	background: #444;
+}
+.gnb li li{
+	border-top: 1px dotted #444;
+}
+.gnb li li:first-child{
+	border:0;
+}
+.search{
+	margin: 15px 0;
+	padding: 0 60px 0 0;
+	position: relative;
+}
+.search>[type="search"]{
+	display: block;
+	width: 100%;
+}
+.search>[type="submit"]{
+	width: 50px;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+/* Tablet & Desktop */
+@media (min-width:768px){
+	.gnb>button{
+		display: none;
+	}
+	.search{
+		position: absolute;
+		top: 20px;
+		right: 10px;
+		margin: 0;
+		width: 200px;
+	}
+	.gnb{
+		margin-bottom: 15px;
+	}
+	.gnb>ul{
+		display: block !important;
+		height: 40px;
+		border-bottom: 40px solid #fff;
+		padding: 0 0 0 25px;
+		overflow: visible;
+		background: -webkit-linear-gradient(#555 0%, #333 50%, #000 50%, #222 100%);
+		background: -moz-linear-gradient(#555 0%, #333 50%, #000 50%, #222 100%);
+		background: -ms-linear-gradient(#555 0%, #333 50%, #000 50%, #222 100%);
+		background: -o-linear-gradient(#555 0%, #333 50%, #000 50%, #222 100%);
+		background: linear-gradient(to bottom, #555 0%, #333 50%, #000 50%, #222 100%);
+	}
+	.gnb ul ul{
+		display: none;
+	}
+	.gnb>ul>li{
+		float: left;
+	}
+	.gnb a{
+		background: none !important;
+	}
+	.gnb>ul>li>a{
+		line-height: 40px;
+		padding: 0 25px;
+	}
+	.gnb>ul>.active>a{
+		background: #fff !important;
+		color: #000;
+		font-weight: 700;
+		margin-top: 4px;
+		line-height: 36px;
+		border-radius: 4px 4px 0 0;
+	}
+	.gnb>ul>li.active>ul{
+		display: block;
+	}
+	.gnb ul ul{
+		position: absolute;
+	}
+	.gnb li li{
+		border: 0;
+		display: inline-block;
+	}
+	.gnb li li>a{
+		color: #666;
+		line-height: 40px;
+	}
+}
+
+/* Tablet */
+@media (min-width:768px) and (max-width:1024px){
+	
+}
+
+/* Desktop */
+@media (min-width:1025px){
 	
 }
