--- a/html/default.css
+++ b/html/default.css
@@ -27,6 +27,23 @@ textarea,
 select{
 	font-size: 14px;
 }
+img,
+video{
+	max-width: 100%;
+	height: auto;
+}
+.vframe{
+	position: relative;
+	max-width: 100%;
+	height: 0;
+	padding-top: 56.25%;
+}
+.vframe>iframe{
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+}
 
 /* All */
 body{
@@ -36,27 +53,14 @@ body{
 	background: -o-linear-gradient(#ccc,#fff); 
 	background: linear-gradient(#ccc,#fff); 
 }
-.header>h1{
-	font-size: 28px;
-	text-shadow:1px 1px 0 #fff;
-}
-.search>input{
-	vertical-align: top;
-	border-radius: 3px;
-}
-
-/* All */
-body{
-	background: -webkit-linear-gradient(#ccc,#fff); 
-	background: -moz-linear-gradient(#ccc,#fff); 
-	background: -ms-linear-gradient(#ccc,#fff); 
-	background: -o-linear-gradient(#ccc,#fff); 
-	background: linear-gradient(#ccc,#fff); 
+main>article{
+	padding: 15px;
 }
 .header>h1{
 	font-size: 28px;
 	text-shadow: 1px 1px 0 #fff;
 }
+
 .search>input{
 	vertical-align: top;
 	border-radius: 10px;
